--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mixpanel-proxy",
+  "name": "analytics-server",
   "private": true,
   "version": "1.0.0",
-  "description": "Mixpanel proxy server which enables us to get around ad-blockers",
+  "description": "Analytics server which enables us to work around in-browser ad-blockers",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/noblocknoparty/mixpanel-proxy.git"
+    "url": "git+https://github.com/noblocknoparty/analytics.git"
   },
   "keywords": [
     "mixpanel",
@@ -22,9 +22,9 @@
   "author": "Ramesh Nair <ram@hiddentao.com>",
   "license": "AGPLv3",
   "bugs": {
-    "url": "https://github.com/noblocknoparty/mixpanel-proxy/issues"
+    "url": "https://github.com/noblocknoparty/analytics/issues"
   },
-  "homepage": "https://github.com/noblocknoparty/mixpanel-proxy#readme",
+  "homepage": "https://github.com/noblocknoparty/analytics#readme",
   "dependencies": {
     "global-tunnel-ng": "^2.6.0",
     "got": "^9.2.2",
